# detection_node

./: README.md  package.xml  setup.py
detection_node/: cv_view.py  detector.py  point_cloud_extractor.py  pose_extractor.py  serial_class.py  serial_port.py  utils.py  video.py  webcam.py
detection_node_cpp/: CMakeLists.txt
detection_node_cpp/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
detection_node_cpp/install/detection_node_cpp/lib/detection_node_cpp/: detection_node_cpp
detection_node_cpp/install/detection_node_cpp/share/ament_index/resource_index/parent_prefix_path/: detection_node_cpp
detection_node_cpp/install/detection_node_cpp/share/detection_node_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
detection_node_cpp/log/: latest_build
detection_node_cpp/src/: detection_node_cpp.cpp
launch/: debug.launch.py  vanilla.launch.py
msg/: multi_array.msg
